# langchain-e2b

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
langchain_e2b/: __init__.py  _version.py  provider.py  sandbox.py
tests/integration_tests/: test_integration.py
tests/unit_tests/: test_async_sandbox.py  test_import.py  test_provider.py
